refactor: Adicionado testes e propriedades do sonar